--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/phosphor-icons/web@latest/src/css/phosphor.css">
 
 </head>
+<!-- j'ai diviser tous Youtube en 4 partis 
+ 1er) la bar Navigation-bar qu'on trouve en haut de la page 
+ 2eme) un main qui contient le reste
+ 3eme) une class hot-bar c'est la bar qu'on trouve a gauche de la page
+ 4eme) une mini-main ou en trouve l'une de Youtube avec les Videos et Shorts
+ 
+ La raison deriere cette particion est pour que la Navigation-bar et la hot-bar reste sur l'ecran meme si en scroll le mini-main, bien sur la hot bar a aussi son scroll independant
+ Merci Beaucoup Monsieur "Othman Mekouar", si j'ai arriver a se niveau (je ne peux vraiment pas distinguer mon Youtube-clone avec le Youtube original ) c'est a cause de vous-->
 <body>
     <div class="Navigation-bar">
         <div class="double">
