correction de l'orthographe

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/phosphor-icons/web@latest/src/css/phosphor.css">
 
 </head>
-<!-- j'ai diviser tous Youtube en 4 partis 
+<!-- j'ai divisé tous Youtube en 4 partis 
  1er) la bar Navigation-bar qu'on trouve en haut de la page 
  2eme) un main qui contient le reste
  3eme) une class hot-bar c'est la bar qu'on trouve a gauche de la page
